# DraARL-RFBox-1

./: .gitignore  LICENSE  README.md  partitions.csv  platformio.ini
.github/workflows/: release-firmware.yml
boards/: esp32-s3-devkitc-1-n16r8.json
lib/: lv_conf.h
lib/Lvgl/: lv_conf.h  lv_conf_template.h
lvglProj/: DraARL-ESP32-v1.sll  DraARL-ESP32-v1.slp  DraARL-ESP32-v1.spj  DraARL-ESP32.sll  DraARL-ESP32.spj  project.info
lvglProj/assets/: ui_font_system.c  ui_font_system.fcfg  ui_font_system20.c  ui_font_system20.fcfg
src/: config.h  main.cpp
src/drivers/: display.cpp  display.h  (+14 more)
src/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_InfoPage.c  ui_InfoPage.h  ui_RFPAGE.c  ui_RFPAGE.h  ui_SettingPAGE.c  ui_SettingPAGE.h  ui_StartUP.c  ui_StartUP.h  ui_comp_hook.c  ui_events.h  ui_font_system.c  ui_helpers.c  ui_helpers.h  ui_img_bluetooth_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c  ui_img_bluetooth_connected_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c  ui_img_bluetooth_disabled_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c  ui_img_browser_updated_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c  ui_img_cloud_alert_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c  ui_img_cloud_done_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c  ui_img_cloud_sync_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c  ui_img_settings_24dp_e3e3e3_fill0_wght400_grad0_opsz24_png.c  ui_img_wifi_1_png.c  ui_img_wifi_2_png.c  ui_img_wifi_3_png.c  ui_img_wifi_4_png.c  ui_img_wifi_bad_png.c  ui_img_wifi_off_png.c  ui_main.c  ui_main.h
tools/: package_firmware.py
web/: ble-config.html
(+18 files in other folders)
